--- a/app/src/main/res/layout/activity_lecture.xml
+++ b/app/src/main/res/layout/activity_lecture.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/geoffSlide"
         android:layout_width="378dp"
         android:layout_height="207dp"
         android:layout_marginTop="12dp"
@@ -34,7 +34,7 @@
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:srcCompat="@drawable/welcome_to_cs_125" />
+        app:srcCompat="@drawable/lec1_slide1" />
 
     <TextView
         android:id="@+id/textView7"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/yourSlide"
         android:layout_width="378dp"
         android:layout_height="207dp"
         android:layout_marginTop="252dp"
@@ -63,7 +63,7 @@
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:srcCompat="@drawable/welcome_to_cs_125" />
+        app:srcCompat="@drawable/lec1_slide1" />
 
     <TextView
         android:id="@+id/textView8"
@@ -79,7 +79,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/geoffSlide" />
 
     <Button
         android:id="@+id/button3"
@@ -91,6 +91,6 @@
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+        app:layout_constraintTop_toBottomOf="@+id/yourSlide" />
 
 </android.support.constraint.ConstraintLayout>
