--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="#00AA61"
+        android:background="@drawable/round_green_button"
         android:text="Start Course"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
@@ -47,11 +45,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="#EFEFF4"
+        android:background="@drawable/round_grey_button"
         android:text="Instructions"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
