--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/day_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -22,10 +22,10 @@
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/grade_text_view" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/grade_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -45,8 +45,7 @@
         android:layout_width="74dp"
         android:layout_height="44dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="15dp"
         android:background="@android:color/transparent"
         android:gravity="right"
         android:paddingLeft="0dp"
@@ -60,15 +59,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/takeQuiz"
+        android:id="@+id/quiz_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@android:color/holo_orange_light"
+        android:background="@drawable/round_yellow_button"
         android:lineSpacingExtra="8sp"
         android:text="Take the Quiz"
         android:textAllCaps="false"
@@ -76,26 +73,24 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button11" />
+        app:layout_constraintTop_toBottomOf="@+id/MP_button" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/MP_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="@drawable/round_blue_button"
         android:lineSpacingExtra="8sp"
-        android:text="Work on MP - 0/4 Complete"
+        android:text="Work on MP - 0/3 Complete"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintTop_toBottomOf="@+id/homework_button" />
 
     <TextView
         android:id="@+id/textView5"
@@ -114,18 +109,16 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/day_text_view" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/homework_button"
         android:layout_width="200dp"
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/round_red_button"
         android:lineSpacingExtra="8sp"
         android:text="Complete Homework"
         android:textAllCaps="false"
@@ -134,18 +127,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/go_to_lecture" />
+        app:layout_constraintTop_toBottomOf="@+id/lecture_button" />
 
     <Button
-        android:id="@+id/go_to_lecture"
+        android:id="@+id/lecture_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="#00AA61"
+        android:background="@drawable/round_green_button"
         android:lineSpacingExtra="8sp"
         android:text="Go to Lecture"
         android:textAllCaps="false"
