New class called networkManager which deals with API requests. Currently does not work, requires some tweaking

--- a/app/src/main/res/layout/cheat_terminal.xml
+++ b/app/src/main/res/layout/cheat_terminal.xml
@@ -14,4 +14,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="151dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="210dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginBottom="279dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/leaveTerminal"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
