--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/quiz_button" />
 
     <Button
-        android:id="@+id/earnExtraCreditButton"
+        android:id="@+id/gotoExtraCredit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
