Trying to push button fix

--- a/app/src/main/res/layout/cheat_terminal.xml
+++ b/app/src/main/res/layout/cheat_terminal.xml
@@ -33,7 +33,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="96dp"
         android:layout_marginBottom="279dp"
-        android:text="Unlock"
+        android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/leaveTerminal"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
