--- a/app/src/main/res/layout/setting_menu.xml
+++ b/app/src/main/res/layout/setting_menu.xml
@@ -18,11 +18,23 @@
 
     <Button
         android:id="@+id/muteMusicButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="168dp"
         android:text="Mute Music"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/resetMusicButton"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="261dp"
+        android:text="Reset music"
+        app:layout_constraintBottom_toTopOf="@+id/returnToMainFromSettings"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/muteMusicButton" />
 </android.support.constraint.ConstraintLayout>
